video_generation/slurm-5036671.out
==================================================
ENHANCED Video Generation Job Started: Fri Jul 25 14:49:17 EDT 2025
Job ID: 5036671
Node: workergpu013
Enhancements: Smart labeling, congestion detection, better visuals
==================================================
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) modules/2.3-20240529   2) openblas/single-0.3.26
Data Configuration:
  Raw data: /mnt/home/dchhantyal/3d-cnn-classification/raw-data/220321_stack11/registered_images
  Label data: /mnt/home/dchhantyal/3d-cnn-classification/raw-data/220321_stack11/registered_label_images
  Model: /mnt/home/dchhantyal/3d-cnn-classification/model/4ncnn/training_outputs/20250724-174101/best_model.pth
  Output: /mnt/home/dchhantyal/3d-cnn-classification/video_generation/output/stack11_4ncnn_20250725_144917

✅ All paths verified
Frame Analysis:
  Raw frames found: 142
  Label frames found: 142
✅ Frame verification complete

System Information:
  SLURM_JOB_ID: 5036671
  SLURM_JOB_NUM_NODES: 1
  SLURM_GPUS_PER_NODE: 1
  SLURM_CPUS_PER_GPU: 2
  Node: workergpu013
  Memory allocated: 32768 MB

Resource Information:
  CPU cores available: 2
  Memory available: 1.0Ti
  Disk space: 439G available

GPU Information:
NVIDIA A100-SXM4-40GB, 40960, 40507

Python Environment:
Python 3.10.13
PyTorch: 2.7.1+cu126
CUDA available: True

🚀 Starting video generation...
==================================================
Traceback (most recent call last):
  File "/mnt/home/dchhantyal/3d-cnn-classification/video_generation/run_stack3_4ncnn.py", line 18, in <module>
    from video_generation.config import VideoConfig
  File "/mnt/home/dchhantyal/3d-cnn-classification/video_generation/__init__.py", line 31, in <module>
    from .model_interface import ModelInferenceEngine
  File "/mnt/home/dchhantyal/3d-cnn-classification/video_generation/model_interface.py", line 250
    from model.4ncnn.data_utils import center_crop_or_pad
               ^
SyntaxError: invalid decimal literal
srun: error: workergpu013: task 0: Exited with exit code 1
==================================================
Video Generation Job Completed: Fri Jul 25 14:49:22 EDT 2025
Exit code: 1
❌ FAILED: Video generation failed with exit code 1
Check error logs above for details
==================================================
